# flutter_docs_scanner

./: .gitattributes  README.md  pubspec.yaml
.fvm/: flutter_sdk
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/xyz/alexstrnik/flutter_docs_scanner/: FlutterDocsScannerPlugin.kt
android/src/test/kotlin/xyz/alexstrnik/flutter_docs_scanner/: FlutterDocsScannerPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/xyz/alexstrnik/flutter_docs_scanner_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: flutter_docs_scanner.podspec
ios/Classes/: FlutterDocsScannerPlugin.swift  flutter_docs_scanner.cpp  flutter_docs_scanner.hpp  utils.hpp
ios/opencv2.framework/: opencv2
lib/: extensions.dart  ffi.dart  flutter_docs_scanner.dart  scanner.dart  scanner_controller.dart
lib/models/: image.dart
lib/widgets/: camera_preview.dart  doc_overlay.dart
src/: CMakeLists.txt
